fixed and realigned the contact us page also edited out the contact us in the footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -445,7 +445,6 @@ footer {
 
 #contact-us-section label {
    width: 30%;
-   display: inline;
 }
 
 #contact-us-section input {
